k8s/qui/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qui-ingressroute
  namespace: qui
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`qui.home.coredev.uk`)
      kind: Rule
      services:
        - name: qui
          port: 7476
  tls:
    secretName: qui-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qui-redirect
  namespace: qui
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`qui.home.coredev.uk`)
      kind: Rule
      middlewares:
        - name: https-redirect
      services:
        - name: qui
          port: 7476
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: qui
spec:
  redirectScheme:
    scheme: https
    permanent: true
